--- a/Plugins/Pattern/PatternWindow.xaml
+++ b/Plugins/Pattern/PatternWindow.xaml
@@ -6,14 +6,14 @@
         xmlns:local="clr-namespace:Pattern"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:PatternManager}"
-        Title="图卡生成工具" Height="600" Width="1280" Background="{DynamicResource GlobalBackground}" WindowStartupLocation="CenterOwner"  Initialized="Window_Initialized">
+        Title="图卡生成工具" Height="600" Width="1300" Background="{DynamicResource GlobalBackground}" WindowStartupLocation="CenterOwner"  Initialized="Window_Initialized">
     <Window.Resources>
         <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource TextBox.Small}"/>
         <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockBaseStyle}"/>
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
@@ -23,8 +23,8 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <StackPanel>
-                <Button Content="打开文件夹" Command="{Binding OpenPatternPathCommand}"/>
-                <Button Content="输出文件夹" Command="{Binding OpenSaveFilePathCommand}"/>
+                <Button Content="打开模板文件夹" Command="{Binding OpenPatternPathCommand}"/>
+                <Button Content="打开输出文件夹" Command="{Binding OpenSaveFilePathCommand}"/>
 
                 <Button Content="保存成模板" Click="TempSave_Click"/>
                 <Button Content="生成所有模板图片" Click="GenAllTemplate_Click"/>
@@ -49,6 +49,7 @@
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource ListViewItemBaseStyle.Small}">
                         <Setter Property="ContextMenu" Value="{Binding ContextMenu}"/>
+                        <Setter Property="Padding" Value="0"/>
                     </Style>
                 </ListView.ItemContainerStyle>
                 <ListView.View>
@@ -109,10 +110,10 @@
                 <Grid x:Name="PatternEditorGrid">
 
                 </Grid>
-                <Button Content="生成" Click="PatternGen_Click" Margin="0,0,0,10"/>
+                <Button Content="生成图卡" Click="PatternGen_Click" Margin="0,0,0,10"/>
 
-                <ComboBox x:Name="cmbFormat"  Margin="0,0,0,5"/>
-                <Button Content="保存" Click="BtnSave_Click"/>
+                <ComboBox x:Name="cmbFormat"  SelectedValue="{Binding Config.PatternFormat}" Margin="0,0,0,5"/>
+                <Button Content="保存图卡" Click="BtnSave_Click"/>
             </StackPanel>
         </ScrollViewer>
 
