--- a/Plugins/Pattern/PatternWindow.xaml
+++ b/Plugins/Pattern/PatternWindow.xaml
@@ -8,7 +8,7 @@
         d:DataContext="{d:DesignInstance local:PatternManager}"
         Title="图卡生成工具" Height="600" Width="1300" Background="{DynamicResource GlobalBackground}" WindowStartupLocation="CenterOwner"  Initialized="Window_Initialized">
     <Window.Resources>
-        <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource TextBox.Small}"/>
+        <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource TextBoxBaseStyle}"/>
         <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockBaseStyle}"/>
     </Window.Resources>
     <Grid>
@@ -24,10 +24,15 @@
             </Grid.RowDefinitions>
             <StackPanel>
                 <Button Content="打开模板文件夹" Command="{Binding OpenPatternPathCommand}"/>
-                <Button Content="打开输出文件夹" Command="{Binding OpenSaveFilePathCommand}"/>
+
+
 
                 <Button Content="保存成模板" Click="TempSave_Click"/>
-                <Button Content="生成所有模板图片" Click="GenAllTemplate_Click"/>
+                <StackPanel Orientation="Horizontal">
+                    <Button Content="生成所有模板图片" Click="GenAllTemplate_Click"/>
+                    <Button Content="打开输出文件夹" Command="{Binding OpenSaveFilePathCommand}"/>
+                    <Button Content="清空" Command="{Binding ClearSaveFilePathCommand}"/>
+                </StackPanel>
                 <Button Grid.Column="1" Margin="0,1,5,0" HorizontalAlignment="Left" Command="{Binding EditCommand}" Padding="2" Height="25" Width="25" >
                     <Button.Triggers>
                         <EventTrigger RoutedEvent="Button.Click">
