--- a/Plugins/Pattern/NineDot/NineDotEditor.xaml
+++ b/Plugins/Pattern/NineDot/NineDotEditor.xaml
@@ -32,8 +32,12 @@
                 <ComboBox x:Name="CbDotFitType" SelectedValue="{Binding DotFitType}" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                <TextBlock Width="100" Text="MarginRatio" Margin="0,0,5,0"/>
-                <TextBox Width="70" Text="{Binding MarginRatio}" Margin="0,0,5,0"/>
+                <TextBlock Width="100" Text="MarginRatioX" Margin="0,0,5,0"/>
+                <TextBox Width="70" Text="{Binding MarginRatioX}" Margin="0,0,5,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock Width="100" Text="MarginRatioY" Margin="0,0,5,0"/>
+                <TextBox Width="70" Text="{Binding MarginRatioY}" Margin="0,0,5,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <TextBlock Width="50" Text="Radius" Margin="0,0,5,0"/>
@@ -50,10 +54,10 @@
                 <CheckBox Width="70" IsChecked="{Binding UseRectangle}" Margin="0,0,5,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Visibility="{Binding UseRectangle,Converter={StaticResource bool2VisibilityConverter}}" Margin="0,0,0,5">
-                <TextBlock Width="50" Text="Height" Margin="0,0,5,0"/>
-                <TextBox Width="70" Text="{Binding RectHeight}" Margin="0,0,5,0"/>
                 <TextBlock Width="50" Text="Width" Margin="0,0,5,0"/>
                 <TextBox Width="70" Text="{Binding RectWidth}" Margin="0,0,5,0"/>
+                <TextBlock Width="50" Text="Height" Margin="0,0,5,0"/>
+                <TextBox Width="70" Text="{Binding RectHeight}" Margin="0,0,5,0"/>
             </StackPanel>
         </StackPanel>
 
