--- a/Plugins/Pattern/Dot/DotEditor.xaml
+++ b/Plugins/Pattern/Dot/DotEditor.xaml
@@ -43,9 +43,10 @@
                 <TextBox Width="70" Text="{Binding StartY}" Margin="0,0,5,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                <TextBlock Width="50" Text="Row" Margin="0,0,5,0"/>
+
+                <TextBlock Width="50" Text="Rows" Margin="0,0,5,0"/>
                 <TextBox Width="70" Text="{Binding Row}" Margin="0,0,5,0"/>
-                <TextBlock Width="50" Text="Col" Margin="0,0,5,0"/>
+                <TextBlock Width="50" Text="Cols" Margin="0,0,5,0"/>
                 <TextBox Width="70" Text="{Binding Col}" Margin="0,0,5,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
