--- a/Plugins/Pattern/Checkerboard/CheckerboardEditor.xaml
+++ b/Plugins/Pattern/Checkerboard/CheckerboardEditor.xaml
@@ -36,6 +36,11 @@
                 <TextBox Width="100" Text="{Binding GridX}" Margin="0,0,5,0"/>
                 <TextBox  Width="100" Text="{Binding GridY}" Margin="0,0,5,0"/>
             </StackPanel>
+            <StackPanel  Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock Text="FieldOfView" Margin="0,0,5,0"/>
+                <TextBox  Width="100" Text="{Binding FieldOfView}" Margin="0,0,5,0"/>
+            </StackPanel>
+            
         </StackPanel>
 
     </Grid>
