--- a/Plugins/Pattern/Cross/CrossEditor.xaml
+++ b/Plugins/Pattern/Cross/CrossEditor.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <StackPanel VerticalAlignment="Top">
             <StackPanel Orientation="Horizontal"  Margin="0,0,0,5">
-                <Button Content="主色" Width="55" Margin="0,0,5,0" Click="BtnPickMainColor_Click"/>
+                <Button Content="背景色" Width="55" Margin="0,0,5,0" Click="BtnPickMainColor_Click"/>
                 <Rectangle x:Name="rectMainColor" Width="25" Height="25" Stroke="Black" Fill="{Binding MainBrush}" Margin="0,0,5,0"/>
                 <Button Content="R" Margin="0,0,5,0" Click="BtnPickMainColorSet_Click"  Tag="R" />
                 <Button Content="G" Margin="0,0,5,0" Click="BtnPickMainColorSet_Click"  Tag="G"/>
@@ -19,7 +19,7 @@
                 <Button Content="K" Margin="0,0,5,0" Click="BtnPickMainColorSet_Click"  Tag="K"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                <Button Content="副色" Width="55" Margin="0,0,5,0" Click="BtnPickAltColor_Click"/>
+                <Button Content="前景色" Width="55" Margin="0,0,5,0" Click="BtnPickAltColor_Click"/>
                 <Rectangle x:Name="rectAltColor" Width="25" Height="25" Stroke="Black" Fill="{Binding AltBrush}" Margin="0,0,5,0"/>
                 <Button Content="R" Margin="0,0,5,0" Click="BtnPickAltColorSet_Click"  Tag="R"/>
                 <Button Content="G" Margin="0,0,5,0" Click="BtnPickAltColorSet_Click"  Tag="G"/>
@@ -35,6 +35,23 @@
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <TextBlock Width="100" Text="VerticalWidth" Margin="0,0,5,0"/>
                 <TextBox Width="70" Text="{Binding VerticalWidth}" Margin="0,0,5,0"/>
+            </StackPanel>
+
+            <DockPanel Margin="0,0,0,5">
+                <TextBlock Text="XField" Margin="0,0,5,0"/>
+                <TextBox Text="{Binding FieldXJson}" Margin="0,0,5,0"/>
+            </DockPanel>
+            <DockPanel  Margin="0,0,0,5" >
+                <TextBlock Text="YField" Margin="0,0,5,0"/>
+                <TextBox Text="{Binding FieldYJson}" Margin="0,0,5,0"/>
+            </DockPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock Width="100" Text="HorizontalLength" Margin="0,0,5,0"/>
+                <TextBox Width="70" Text="{Binding HorizontalLength}" Margin="0,0,5,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock Width="100" Text="VerticalLength" Margin="0,0,5,0"/>
+                <TextBox Width="70" Text="{Binding VerticalLength}" Margin="0,0,5,0"/>
             </StackPanel>
         </StackPanel>
 
