--- a/Plugins/Pattern/Dot/DotEditor.xaml
+++ b/Plugins/Pattern/Dot/DotEditor.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <StackPanel VerticalAlignment="Top">
             <StackPanel Orientation="Horizontal"  Margin="0,0,0,5">
-                <Button Content="主色" Width="55" Margin="0,0,5,0" Click="BtnPickMainColor_Click"/>
+                <Button Content="背景色" Width="55" Margin="0,0,5,0" Click="BtnPickMainColor_Click"/>
                 <Rectangle x:Name="rectMainColor" Width="25" Height="25" Stroke="Black" Fill="{Binding MainBrush}" Margin="0,0,5,0"/>
                 <Button Content="R" Margin="0,0,5,0" Click="BtnPickMainColorSet_Click"  Tag="R" />
                 <Button Content="G" Margin="0,0,5,0" Click="BtnPickMainColorSet_Click"  Tag="G"/>
@@ -19,7 +19,7 @@
                 <Button Content="K" Margin="0,0,5,0" Click="BtnPickMainColorSet_Click"  Tag="K"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                <Button Content="副色" Width="55" Margin="0,0,5,0" Click="BtnPickAltColor_Click"/>
+                <Button Content="前景色" Width="55" Margin="0,0,5,0" Click="BtnPickAltColor_Click"/>
                 <Rectangle x:Name="rectAltColor" Width="25" Height="25" Stroke="Black" Fill="{Binding AltBrush}" Margin="0,0,5,0"/>
                 <Button Content="R" Margin="0,0,5,0" Click="BtnPickAltColorSet_Click"  Tag="R"/>
                 <Button Content="G" Margin="0,0,5,0" Click="BtnPickAltColorSet_Click"  Tag="G"/>
@@ -36,18 +36,13 @@
                 <TextBlock Width="50" Text="Radius" Margin="0,0,5,0"/>
                 <TextBox Width="70" Text="{Binding Radius}" Margin="0,0,5,0"/>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                <TextBlock Width="50" Text="StartX" Margin="0,0,5,0"/>
-                <TextBox Width="70" Text="{Binding StartX}" Margin="0,0,5,0"/>
-                <TextBlock Width="50" Text="StartY" Margin="0,0,5,0"/>
-                <TextBox Width="70" Text="{Binding StartY}" Margin="0,0,5,0"/>
-            </StackPanel>
+
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
 
                 <TextBlock Width="50" Text="Rows" Margin="0,0,5,0"/>
-                <TextBox Width="70" Text="{Binding Row}" Margin="0,0,5,0"/>
+                <TextBox Width="70" Text="{Binding Rows}" Margin="0,0,5,0"/>
                 <TextBlock Width="50" Text="Cols" Margin="0,0,5,0"/>
-                <TextBox Width="70" Text="{Binding Col}" Margin="0,0,5,0"/>
+                <TextBox Width="70" Text="{Binding Cols}" Margin="0,0,5,0"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <TextBlock Width="100" Text="UseRectangle" Margin="0,0,5,0"/>
@@ -58,6 +53,10 @@
                 <TextBox Width="70" Text="{Binding RectWidth}" Margin="0,0,5,0"/>
                 <TextBlock Width="50" Text="Height" Margin="0,0,5,0"/>
                 <TextBox Width="70" Text="{Binding RectHeight}" Margin="0,0,5,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock  Text="FieldOfView" Margin="0,0,5,0"/>
+                <TextBox Width="70" Text="{Binding FieldOfView}" Margin="0,0,5,0"/>
             </StackPanel>
 
         </StackPanel>
