--- a/UI/ColorVision.Solution/Rbac/RbacManagerWindow.xaml
+++ b/UI/ColorVision.Solution/Rbac/RbacManagerWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="ColorVision.Engine.Rbac.RbacManagerWindow"
+﻿<Window x:Class="ColorVision.Rbac.RbacManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Engine.Rbac"
-        xmlns:properties ="clr-namespace:ColorVision.Engine.Properties"
+        xmlns:local="clr-namespace:ColorVision.Rbac"
+        xmlns:properties ="clr-namespace:ColorVision.Solution.Properties"
         xmlns:hc ="https://handyorg.github.io/handycontrol"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:RbacManager}"
