--- a/UI/ColorVision.Solution/Rbac/UserManagerWindow.xaml
+++ b/UI/ColorVision.Solution/Rbac/UserManagerWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorVision.Engine.Rbac.UserManagerWindow"
+﻿<Window x:Class="ColorVision.Rbac.UserManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Engine.Rbac"
+        xmlns:local="clr-namespace:ColorVision.Rbac"
         mc:Ignorable="d"
         Title="用户管理" Height="720" Width="1280" WindowStartupLocation="CenterOwner" Initialized="Window_Initialized">
     <Grid Margin="10">
