--- a/Engine/ColorVision.Engine/Templates/Jsons/LEDStripDetectionV2/DisplayLEDStripDetectionV2.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/LEDStripDetectionV2/DisplayLEDStripDetectionV2.xaml
@@ -11,6 +11,15 @@
     <Grid>
         <StackPanel>
             <DockPanel Margin="0,2">
+                <TextBlock Text="ROI" Width="60"/>
+                <ComboBox  x:Name="ComboxPoiTemplate"  Width="130" HorizontalAlignment="Left" SelectedIndex="{Binding TemplatePoiSelectedIndex}" Style="{StaticResource ComboBox.Small}" SelectedValuePath="Value"  DisplayMemberPath="Key" />
+                <Grid Width="20" Margin="5,0" HorizontalAlignment="Left">
+                    <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="15"  Foreground="{DynamicResource GlobalTextBrush}"/>
+                    <Button  Width="20" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" Command="{Binding OpenTemplatePoiCommand}"/>
+                </Grid>
+            </DockPanel>
+            <DockPanel Margin="0,2">
+                <TextBlock Text="灯条" Width="60"/>
                 <Button  Content="{x:Static properties:Resources.Calculate}" DockPanel.Dock="Right"  HorizontalAlignment="Right" Click="RunTemplate_Click" />
                 <ComboBox x:Name="ComboxTemplate"  SelectedIndex="{Binding TemplateSelectedIndex}" Width="130" HorizontalAlignment="Left" Style="{StaticResource ComboBox.Small}" SelectedValuePath="Value" DisplayMemberPath="Key" />
                 <Grid Width="20" Margin="5,0" HorizontalAlignment="Left">
