--- a/Engine/ColorVision.Engine/Templates/POI/POIOutput/EditPoiOutput.xaml
+++ b/Engine/ColorVision.Engine/Templates/POI/POIOutput/EditPoiOutput.xaml
@@ -31,6 +31,10 @@
                     <TextBox Text="{Binding Width}" Width="100" HorizontalAlignment="Left"/>
                 </DockPanel>
                 <DockPanel  Margin="5,0,0,5" >
+                    <TextBlock HorizontalAlignment="Left" Text="MaskFileName"  MinWidth="100"/>
+                    <TextBox Text="{Binding MaskFileName}" Width="100" HorizontalAlignment="Left"/>
+                </DockPanel>
+                <DockPanel  Margin="5,0,0,5" >
                     <TextBlock HorizontalAlignment="Left" Text="对标参数"  MinWidth="100"/>
                 </DockPanel>
                 <Border Grid.Row="1" Style="{StaticResource BorderModuleArea}" CornerRadius="5" Margin="0,0,0,5">
