--- a/Plugins/Pattern/Checkerboard/CheckerboardEditor.xaml
+++ b/Plugins/Pattern/Checkerboard/CheckerboardEditor.xaml
@@ -38,7 +38,8 @@
             </StackPanel>
             <StackPanel  Orientation="Horizontal" Margin="0,0,0,5">
                 <TextBlock Text="FieldOfView" Margin="0,0,5,0"/>
-                <TextBox  Width="100" Text="{Binding FieldOfView}" Margin="0,0,5,0"/>
+                <TextBox  Width="100" Text="{Binding FieldOfViewX}" Margin="0,0,5,0"/>
+                <TextBox  Width="100" Text="{Binding FieldOfViewY}" Margin="0,0,5,0"/>
             </StackPanel>
             
         </StackPanel>
