--- a/Plugins/Pattern/NineDot/NineDotEditor.xaml
+++ b/Plugins/Pattern/NineDot/NineDotEditor.xaml
@@ -59,6 +59,11 @@
                 <TextBlock Width="50" Text="Height" Margin="0,0,5,0"/>
                 <TextBox Width="70" Text="{Binding RectHeight}" Margin="0,0,5,0"/>
             </StackPanel>
+            <StackPanel  Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock Text="FieldOfView" Margin="0,0,5,0"/>
+                <TextBox  Width="100" Text="{Binding FieldOfViewX}" Margin="0,0,5,0"/>
+                <TextBox  Width="100" Text="{Binding FieldOfViewY}" Margin="0,0,5,0"/>
+            </StackPanel>
         </StackPanel>
 
     </Grid>
