--- a/Plugins/Pattern/PatternWindow.xaml
+++ b/Plugins/Pattern/PatternWindow.xaml
@@ -23,11 +23,13 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <StackPanel>
-                <Button Content="打开模板文件夹" Command="{Binding OpenPatternPathCommand}"/>
-
-
-
-                <Button Content="保存成模板" Click="TempSave_Click"/>
+                <Button Content="打开模板文件夹" Command="{Binding OpenPatternPathCommand}" Margin="0,0,0,5"/>
+                <StackPanel Orientation="Horizontal"  Margin="0,0,0,5">
+                    <Button Content="导出模板组" Command="{Binding ExportZipCommand}" Margin="0,0,5,0"/>
+                    <Button Content="导入模板组" Command="{Binding ImportZipCommand}" Margin="0,0,5,0"/>
+                </StackPanel>
+                
+                <Button Content="保存成模板" Click="TempSave_Click" Margin="0,0,0,5"/>
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                     <Button Content="生成所有模板图片" Click="GenAllTemplate_Click"/>
                     <Button Content="打开输出文件夹" Command="{Binding OpenSaveFilePathCommand}"/>
