--- a/Plugins/Pattern/SFR/SFREditor.xaml
+++ b/Plugins/Pattern/SFR/SFREditor.xaml
@@ -47,6 +47,11 @@
                 <TextBlock Width="50" Text="Cols" Margin="0,0,5,0"/>
                 <TextBox Width="70" Text="{Binding Cols}" Margin="0,0,5,0"/>
             </StackPanel>
+            <StackPanel  Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock Text="FieldOfView" Margin="0,0,5,0"/>
+                <TextBox  Width="100" Text="{Binding FieldOfViewX}" Margin="0,0,5,0"/>
+                <TextBox  Width="100" Text="{Binding FieldOfViewY}" Margin="0,0,5,0"/>
+            </StackPanel>
         </StackPanel>
 
     </Grid>
