--- a/Plugins/Pattern/Stripe/StripeEditor.xaml
+++ b/Plugins/Pattern/Stripe/StripeEditor.xaml
@@ -41,9 +41,10 @@
                 <TextBlock Width="80" Text="LineThickness" Margin="0,0,5,0"/>
                 <TextBox Width="70" Text="{Binding VerticalWidth}" Margin="0,0,5,0"/>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,0,0,5" >
-                <TextBlock Width="80" Text="FieldOfView" Margin="0,0,5,0"/>
-                <TextBox Width="70" Text="{Binding FieldOfView}" Margin="0,0,5,0"/>
+            <StackPanel  Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock Text="FieldOfView" Margin="0,0,5,0"/>
+                <TextBox  Width="100" Text="{Binding FieldOfViewX}" Margin="0,0,5,0"/>
+                <TextBox  Width="100" Text="{Binding FieldOfViewY}" Margin="0,0,5,0"/>
             </StackPanel>
         </StackPanel>
 
